# HostSync

./: .cfgignore  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release-desktop.yml  release.yml
.knowledge/: prd.md  tech-design.md
cli/: README.md  package.json  tsconfig.json  tsup.config.ts
cli/src/: index.ts
cli/src/commands/: init.ts  list.ts  pull.ts  push.ts  scan.ts  web.ts
cli/src/lib/: config.ts  ignore.ts  pathMapper.ts  s3Client.ts  scanner.ts  token.ts  walk.ts
desktop/: README.md  index.html  package.json  vite.config.ts
desktop/src/: App.tsx  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: config.rs  config_scan.rs  lib.rs  main.rs  path_mapper.rs  s3.rs  skill.rs  store.rs
desktop/src/lib/: api.ts  tree.ts
desktop/src/views/: ApiManage.tsx  ConfigManage.tsx  HostManage.tsx  S3Files.tsx  Settings.tsx  SkillManage.tsx
web-ui/: index.html  package.json
web-ui/src/: App.tsx  styles.css  types.ts
web-ui/src/lib/: api.ts  tree.ts
