[package]
name = "hostsync-desktop"
version = "0.1.0"
description = "HostSync 桌面端 — S3 主机分层配置同步"
authors = ["HostSync"]
edition = "2021"
rust-version = "1.91"

[lib]
name = "hostsync_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
thiserror = "2"
base64 = "0.22"
rfd = "0.15"
hostname = "0.4"
percent-encoding = "2"
